--- a/main.html
+++ b/main.html
@@ -10,7 +10,8 @@
       <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
 </head>
-<body class="font-normal overflow-x-hidden">
+<body class="font-normal overflow-x-hidden" style="
+    font-family: Janna LT;">
     <header>
     <nav class="bg-white border-gray-200 lg:px-6 dark:bg-gray-800 p-5">
         <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl">
@@ -55,7 +56,7 @@
       <div class="max-w-6xl mx-auto px-4 sm:px-6">
         <div class="pt-32 pb-12 md:pt-40 md:pb-20">
           <div class="text-center pb-12 md:pb-16">
-            <h1 class="text-lg lg:text-5xl md:text-4xl font-bold leading-tighter tracking-tighter mb-4 aos-init aos-animate text-cyan-500 " data-aos="zoom-y-out">
+            <h1 class="text-lg lg:text-5xl md:text-4xl font-bold leading-tighter tracking-tighter mb-4 aos-init aos-animate text-cyan-500" data-aos="zoom-y-out">
               إلمام .. كُن مُلماً بمنشأتك
                <!-- <span pan class="bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-teal-400">wonderful</span> -->
             </h1>
@@ -110,31 +111,31 @@
             <div class="flex justify-start mb-8">
               <img src="imges/money-4.svg" alt="" class="ltr:mr-8 rtl:ml-8">
               <h4 class="mt-auto mb-auto font-bold text-3xl">مخاطر مالية</h4>
-            </div> 
+            </div>
             <p class="text-lg	text-slate-500 px-10">
               - تجنب الهدر المالي بسبب عدم معرفة بعض الإجراءات الحكومية
   <br>
-  - تجنب مخالفات تحدث نتيجة كثرة العمليات الحكومية وترابطها</p>           
+  - تجنب مخالفات تحدث نتيجة كثرة العمليات الحكومية وترابطها</p>
           </div>
           <div class="w-[442px] border-2 border-slate-200 px-10 py-7 rounded-xl	">
             <div class="flex justify-start mb-8">
               <img src="imges/phone.svg" alt="" class="ltr:mr-8 rtl:ml-8">
               <h4 class="mt-auto mb-auto font-bold text-3xl">مخاطر نظامية</h4>
-            </div> 
+            </div>
             <p class="text-lg	text-slate-500 px-10">
               - تجنب المشاكل الناتجة عن التوطين الوهمي
 <br>
-- تجنب عدم الاستفادة من الدعم الحكومي للمنشأة</p>           
+- تجنب عدم الاستفادة من الدعم الحكومي للمنشأة</p>
           </div>
           <div class="w-[442px] border-2 border-slate-200 px-10 py-7 rounded-xl	">
             <div class="flex justify-start mb-8">
               <img src="imges/computer.svg" alt="" class="ltr:mr-8 rtl:ml-8">
               <h4 class="mt-auto mb-auto font-bold text-3xl">مخاطر إدارية</h4>
-            </div> 
+            </div>
             <p class="text-lg	text-slate-500 px-10">
               - تجنب عدم قدرة المسؤولين عن العمليات الحكومية على قيادة المنشأة
   <br>
-  - تجنب عدم وجود تصور واضح للإدارة التنفيذية لاتخاذ القرارات السليمة</p>           
+  - تجنب عدم وجود تصور واضح للإدارة التنفيذية لاتخاذ القرارات السليمة</p>
           </div>
         </div>
       </div>
@@ -202,11 +203,11 @@
   <section
   x-data="
   {
-  openFaq1: false, 
-  openFaq2: false, 
-  openFaq3: false, 
-  openFaq4: false, 
-  openFaq5: false, 
+  openFaq1: false,
+  openFaq2: false,
+  openFaq3: false,
+  openFaq4: false,
+  openFaq5: false,
   openFaq6: false
   }
   "
