--- a/TaC.html
+++ b/TaC.html
@@ -52,45 +52,39 @@
 </header>
 
 <section class="relative">
-    <div class="absolute left-[420px] transform -translate-x-1/2 pointer-events-none -z-1 max-h[1280px] max-w[821px]" aria-hidden="true">
+      <div class="absolute left-[420px] transform -translate-x-1/2 pointer-events-none -z-1 max-h[1280px] max-w[821px]" aria-hidden="true">
         <img src="imges/Group.svg" alt="">
-    </div>
-    <div class="mx-20 mt-[85px] w-[1569px]">
+      </div>
+    <div class=" mx-5 md:mx-11 lg:mx-20 mt-[85px] w-11/12">
         <h1 class="text-lg lg:text-5xl md:text-4xl font-bold leading-tighter tracking-tighter mb-[86px] aos-init aos-animate text-cyan-500">الشروط والأحكام</h1>
-        <p class="text-[26px] leading-[62px]">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق.إذا كنت تحتاج إلى عدد أكبر من الفقرات يتيح لك مولد النص العربى زيادة عدد الفقرات كما تريد، النص لن يبدو مقسما ولا يحوي أخطاء لغوية، مولد النص العربى مفيد لمصممي المواقع على وجه الخصوص، حيث يحتاج العميل فى كثير من الأحيان أن يطلع على صورة حقيقية لتصميم الموقع.ومن هنا وجب على المصمم أن يضع نصوصا مؤقتة على التصميم ليظهر للعميل الشكل كاملاً،دور مولد النص العربى أن يوفر على المصمم عناء البحث عن نص بديل لا علاقة له بالموضوع الذى يتحدث عنه التصميم فيظهر بشكل لا يليق.هذا النص يمكن أن يتم تركيبه على أي تصميم دون مشكلة فلن يبدو وكأنه نص منسوخ، غير منظم، غير منسق، أو حتى غير مفهوم. لأنه مازال نصاً بديلاً ومؤقتاً. هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق.إذا كنت تحتاج إلى عدد أكبر من الفقرات يتيح لك مولد النص العربى زيادة عدد الفقرات كما تريد، النص لن يبدو مقسما ولا يحوي أخطاء لغوية، مولد النص العربى مفيد لمصممي المواقع على وجه الخصوص، حيث يحتاج العميل فى كثير من الأحيان أن يطلع على صورة حقيقية لتصميم الموقع.ومن هنا وجب على المصمم أن يضع نصوصا مؤقتة على التصميم ليظهر للعميل الشكل كاملاً،دور مولد النص العربى أن يوفر على المصمم عناء البحث عن نص بديل لا علاقة له بالموضوع الذى يتحدث عنه التصميم فيظهر بشكل لا يليق.هذا النص يمكن أن يتم تركيبه على أي تصميم دون مشكلة فلن يبدو وكأنه نص منسوخ، غير منظم، غير منسق، أو حتى غير مفهوم. لأنه مازال نصاً بديلاً ومؤقتاً.هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق.إذا كنت تحتاج إلى عدد أكبر من الفقرات يتيح لك مولد النص العربى زيادة عدد الفقرات كما تريد، النص لن يبدو مقسما ولا يحوي أخطاء لغوية، مولد النص العربى مفيد لمصممي المواقع على وجه الخصوص، حيث يحتاج العميل فى كثير من الأحيان أن يطلع على صورة حقيقية لتصميم الموقع.ومن هنا وجب على المصمم أن يضع نصوصا مؤقتة على التصميم ليظهر للعميل الشكل كاملاً،دور مولد النص العربى أن يوفر على المصمم عناء البحث عن نص بديل لا علاقة له بالموضوع الذى يتحدث عنه التصميم فيظهر بشكل لا يليق.هذا النص يمكن أن يتم تركيبه على أي تصميم دون مشكلة فلن يبدو وكأنه نص منسوخ، غير منظم، غير منسق، أو حتى غير مفهوم. لأنه مازال نصاً بديلاً ومؤقتاً.</p>
+        <p class="text-base lg:text-2xl 2xl:text-[26px] leading-[40px] md:leding-[62px]">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق.إذا كنت تحتاج إلى عدد أكبر من الفقرات يتيح لك مولد النص العربى زيادة عدد الفقرات كما تريد، النص لن يبدو مقسما ولا يحوي أخطاء لغوية، مولد النص العربى مفيد لمصممي المواقع على وجه الخصوص، حيث يحتاج العميل فى كثير من الأحيان أن يطلع على صورة حقيقية لتصميم الموقع.ومن هنا وجب على المصمم أن يضع نصوصا مؤقتة على التصميم ليظهر للعميل الشكل كاملاً،دور مولد النص العربى أن يوفر على المصمم عناء البحث عن نص بديل لا علاقة له بالموضوع الذى يتحدث عنه التصميم فيظهر بشكل لا يليق.هذا النص يمكن أن يتم تركيبه على أي تصميم دون مشكلة فلن يبدو وكأنه نص منسوخ، غير منظم، غير منسق، أو حتى غير مفهوم. لأنه مازال نصاً بديلاً ومؤقتاً. هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق.إذا كنت تحتاج إلى عدد أكبر من الفقرات يتيح لك مولد النص العربى زيادة عدد الفقرات كما تريد، النص لن يبدو مقسما ولا يحوي أخطاء لغوية، مولد النص العربى مفيد لمصممي المواقع على وجه الخصوص، حيث يحتاج العميل فى كثير من الأحيان أن يطلع على صورة حقيقية لتصميم الموقع.ومن هنا وجب على المصمم أن يضع نصوصا مؤقتة على التصميم ليظهر للعميل الشكل كاملاً،دور مولد النص العربى أن يوفر على المصمم عناء البحث عن نص بديل لا علاقة له بالموضوع الذى يتحدث عنه التصميم فيظهر بشكل لا يليق.هذا النص يمكن أن يتم تركيبه على أي تصميم دون مشكلة فلن يبدو وكأنه نص منسوخ، غير منظم، غير منسق، أو حتى غير مفهوم. لأنه مازال نصاً بديلاً ومؤقتاً.هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق.إذا كنت تحتاج إلى عدد أكبر من الفقرات يتيح لك مولد النص العربى زيادة عدد الفقرات كما تريد، النص لن يبدو مقسما ولا يحوي أخطاء لغوية، مولد النص العربى مفيد لمصممي المواقع على وجه الخصوص، حيث يحتاج العميل فى كثير من الأحيان أن يطلع على صورة حقيقية لتصميم الموقع.ومن هنا وجب على المصمم أن يضع نصوصا مؤقتة على التصميم ليظهر للعميل الشكل كاملاً،دور مولد النص العربى أن يوفر على المصمم عناء البحث عن نص بديل لا علاقة له بالموضوع الذى يتحدث عنه التصميم فيظهر بشكل لا يليق.هذا النص يمكن أن يتم تركيبه على أي تصميم دون مشكلة فلن يبدو وكأنه نص منسوخ، غير منظم، غير منسق، أو حتى غير مفهوم. لأنه مازال نصاً بديلاً ومؤقتاً.</p>
     </div>
 
-
-
-
-
-
-    <div class="mx-20 mt-[216px]">
-        <img src="imges/elmam-logo-1.svg" alt="">
-        <h1 class="text-lg lg:text-base md:text-4xl font-bold leading-tighter tracking-tighter aos-init aos-animate text-cyan-500 mt-12" data-aos="zoom-y-out">
+    <footer>
+        <div class="mx-5 md:mx-11 lg:mx-20 mt-[216px]">
+            <img src="imges/elmam-logo-1.svg" alt="">
+        <h1 class="text-lg lg:text-base font-bold leading-tighter tracking-tighter aos-init aos-animate text-cyan-500 mt-12" data-aos="zoom-y-out">
             إلمام .. كُن مُلماً بمنشأتك</h1>
     </div>
 
-
-    <div class="  lg:flex lg:order-1 hidden w-[0%] mt-12 mx-20 lg:text-[22px]" id="mobile-menu-2" >
-                <ul class=" flex flex-col mt-4 font-medium lg:flex-row lg:space-x-8  w-full justify-between lg:w-[0%] lg:gap-[93px] lg:m-auto">
+    <div class="  lg:flex lg:order-1 w-[50%] mt-12 mx-5 md:mx-11 lg:mx-20 lg:text-[22px]" id="mobile-menu-2" >
+                <ul class=" flex flex-col mt-4 font-medium lg:flex-row lg:space-x-8 w-full justify-between lg:gap-[93px] lg:m-auto">
                     <li>
-                        <a href="#" class="block py-2 pr-4 pl-3 text-black border-b border-gray-100 hover:bg-cyan-500 lg:hover:bg-transparent lg:border-0 lg:hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700 lg:w-max" aria-current="page">من نحن</a>
+                        <a href="#" class="block py-2 pr-4 pl-3 text-black lg:hover:bg-transparent lg:border-0 hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent lg:w-max" aria-current="page">من نحن</a>
                     </li>
                     <li>
-                        <a href="#" class="block py-2 pr-4 pl-3 text-black border-b border-gray-100 hover:bg-cyan-500 lg:hover:bg-transparent lg:border-0 lg:hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700 lg:w-max">سياسة الخصوصية</a>
+                        <a href="#" class="block py-2 pr-4 pl-3 text-black lg:hover:bg-transparent lg:border-0 hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent lg:w-max">سياسة الخصوصية</a>
                     </li>
                     <li>
-                        <a href="#" class="block py-2 pr-4 pl-3 text-black border-b border-gray-100 hover:bg-cyan-500 lg:hover:bg-transparent lg:border-0 lg:hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700 lg:w-max">الشروط والأحكام</a>
+                        <a href="#" class="block py-2 pr-4 pl-3 text-black lg:hover:bg-transparent lg:border-0 hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent lg:w-max">الشروط والأحكام</a>
                     </li>
                     <li>
-                        <a href="#" class="block py-2 pr-4 pl-3 text-black border-b border-gray-100 hover:bg-cyan-500 lg:hover:bg-transparent lg:border-0 lg:hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700 lg:w-max">الدعم الفني</a>
+                        <a href="#" class="block py-2 pr-4 pl-3 text-black lg:hover:bg-transparent lg:border-0 hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent lg:w-max">الدعم الفني</a>
                     </li>
                 </ul>
     </div>
 
-
-        <div class="mt-[86px] mx-20 mb-8 flex justify-between	">
+        <div class="mt-[86px] mx-5 md:mx-11 lg:mx-20 mb-8 flex justify-between">
             <div>
                 <p>جميع الحقوق محفوظة © 2024 | لموقع إلمام </p>
             </div>
@@ -98,8 +92,8 @@
                 <img src="imges/x-2.svg" alt="">
             </div>
         </div>
-
+    </footer>
     </section>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
 </body>
 </html>
