--- a/main.html
+++ b/main.html
@@ -53,32 +53,32 @@
 
 <main>
     <section class="relative">
-      <div class="absolute left-[420px] transform -translate-x-1/2 pointer-events-none -z-1 max-h[1280px] max-w[821px]" aria-hidden="true">
+      <div class="absolute left-0 z-[-1] top-[-15.5%] xl:top-[-15.5%] lg:top-[-46.5%] sm:top-[-73.5%] md:top-[-70.5%]" aria-hidden="true">
         <img src="imges/Group.svg" alt="">
       </div>
-      <div class="max-w-6xl mx-auto px-4 sm:px-6">
-        <div class="pt-32 pb-12 md:pt-40 md:pb-20">
-          <div class="text-center pb-12 md:pb-16">
-            <h1 class="text-lg lg:text-5xl md:text-4xl font-bold leading-tighter tracking-tighter mb-4 aos-init aos-animate text-cyan-500" data-aos="zoom-y-out">
+      <div class="m-auto px-4 sm:px-6">
+        <div class="pt-[52px] pb-4 md:pt-[54px] md:pb-6 xl:pt-16 xl:pb-8">
+          <div class="text-center pb-[52px] md:pb-[54px] xl:pb[68px]">
+            <h1 class="text-lg xl:text-[46px] md:text-[42px] text-lg font-bold leading-tighter tracking-tighter mb-4 md:mb-7 xl:mb-8 aos-init aos-animate text-cyan-500" data-aos="zoom-y-out">
               إلمام .. كُن مُلماً بمنشأتك
                <!-- <span pan class="bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-teal-400">wonderful</span> -->
             </h1>
             <div class="max-w-3xl mx-auto">
-              <p class="text-xl text-gray-600 mb-8 aos-init aos-animate lg:text-3xl font-bold" data-aos="zoom-y-out" data-aos-delay="150" style="font-family: sans-serif;">
-                نظام تقني يعمل على تحليل بيانات المنشأة في  <span pan class="bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-teal-400 lg:text-4xl">الجهات الحكومية</span>  وتقديم الإرشادات والتوجيهات بشكل مؤتمت لجعل المنشأة بأفضل مما هي عليه
+              <p class="text-lg xl:text-[32px] md:text-[26px] text-gray-600 mb-4 md:mb-7 xl:mb-8 aos-init aos-animate lg:text-3xl font-bold" data-aos="zoom-y-out" data-aos-delay="150" style="font-family: sans-serif;">
+                نظام تقني يعمل على تحليل بيانات المنشأة في  <span pan class="bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-teal-400 text-2xl	xl:text-[40px] md:text-[38px]">الجهات الحكومية</span>  وتقديم الإرشادات والتوجيهات بشكل مؤتمت لجعل المنشأة بأفضل مما هي عليه
               </p>
               <div class="inline-grid justify-items-center">
-                <h1 class="mb-8 text-zinc-500">يمكنك الأن معرفة حالة منشأتك</h1>
-                <a href="#" class="text-white bg-cyan-500 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2 dark:bg-primary-600 dark:hover:bg-primary-700 focus:outline-none dark:focus:ring-primary-800  h-11 rounded-[10px] flex justify-center m-8 font-bold">انشاء تقارير</a>
+                <h1 class="mb-8 text-zinc-500 text-base md:text-lg">يمكنك الأن معرفة حالة منشأتك</h1>
+                <a href="#" class="text-white bg-cyan-500 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 rounded-lg text-base sm:text-xl px-4 lg:px-5 py-2 lg:py-2.5 mb-4 md:mb-7 xl:mb-8 dark:bg-primary-600 dark:hover:bg-primary-700 focus:outline-none dark:focus:ring-primary-800  h-11 rounded-[10px] flex justify-center m-8 font-bold">انشاء تقارير</a>
               </div>
-                <div class="text-base">
-                  <a class="pl-8 pt-1.5 text-cyan-500" style="border-left: groove;">اشتراك لتقرير واحد</a>
+                <div class="text-xs md:text-base">
+                  <a class="pl-8 pt-1.5 font-bold text-cyan-500" style="border-left: groove;">اشتراك لتقرير واحد</a>
                   <a class=" pr-8 text-zinc-500">اشتراك سنوي لا محدود</a>
                 </div>
             </div>
           </div>
-          <div class="w-[1192px] h-[730px] bg-gray-600 relative z-0">
-            <img class="" src="" alt="">
+          <div class="relative z-0 flex justify-center w-auto">
+            <iframe src="https://www.youtube.com/embed/0VIdyvM4YI0" frameborder="0" class="w-[343px] h-[209px] sm:w-[620px] sm:h-[350px] lg:w-[810px] lg:h-[496px] xl:w-[1192px] xl:h-[730px]"></iframe>
           </div>
     </section>
     <section class="mt-48	">
