--- a/main.html
+++ b/main.html
@@ -83,59 +83,59 @@
     </section>
     <section class="mt-48	">
       <div class="mb-16">
-        <h2 class="flex justify-center text-lg lg:text-5xl md:text-4xl font-bold leading-tighter tracking-tighter mb-10 aos-init aos-animate text-cyan-500">عن إلمام</h2>
-        <h3 class="flex justify-center text-2xl	font-bold">تعريف عن الرؤية والاهداف</h3>
+        <h2 class="flex justify-center text-3xl xl:text-[552px] md:text-5xl font-bold leading-tighter tracking-tighter mb-10 aos-init aos-animate text-cyan-500">عن إلمام</h2>
+        <h3 class="flex justify-center text-base md:text-[26px] xl:text-3xl font-bold">تعريف عن الرؤية والاهداف</h3>
       </div>
-      <div class="flex justify-center gap-40">
-        <div class="lg:w-[548px] lg:h-80 rounded-xl" style="box-shadow: 0px 67.114px 109.061px 0px rgba(0, 0, 0, 0.05);">
+      <div class="md:flex md:justify-center inline-grid gap-40">
+        <div class="w-[90%] h-full lg:w-[548px] m-auto lg:h-80 rounded-xl" style="box-shadow: 0px 67.114px 109.061px 0px rgba(0, 0, 0, 0.05);">
           <div class="flex justify-center mb-8">
-            <img src="imges/eye.svg" alt="" class="ltr:mr-8 rtl:ml-8">
-            <h4 class="mt-auto mb-auto font-bold text-3xl">الرؤية</h4>
+            <img src="imges/eye.svg" alt="" class="ml-2.5 md:ml-5">
+            <h4 class="mt-auto mb-auto font-bold text-xl	 md:text-[26px] xl:text-3xl">الرؤية</h4>
           </div>
-          <p class="text-lg	text-slate-500 px-10 leading-[44px]">تطمح إلمام أن تكون الشريك التقني للمنشآت في المملكة وذلك من خلال تقديم أفضل النصائح والإرشادات في العمليات الحكومية للمنشآت بشكل مؤتمت بالكامل مما يساعدها على اتخاذ أفضل القرارات والتقدم نحو النجاح.</p>
+          <p class="text-xs md:text-sm	xl:text-lg text-slate-500 px-10 leading-6 md:leading-8 xl:leading-[44px] pb-5 xl:pb-8 font-normal">تطمح إلمام أن تكون الشريك التقني للمنشآت في المملكة وذلك من خلال تقديم أفضل النصائح والإرشادات في العمليات الحكومية للمنشآت بشكل مؤتمت بالكامل مما يساعدها على اتخاذ أفضل القرارات والتقدم نحو النجاح.</p>
         </div>
-        <div class="lg:w-[548px] lg:h-80 rounded-xl" style="box-shadow: 0px 67.114px 109.061px 0px rgba(0, 0, 0, 0.05);">
+        <div class="w-[90%] h-full lg:w-[548px] lg:h-80 m-auto rounded-xl" style="box-shadow: 0px 67.114px 109.061px 0px rgba(0, 0, 0, 0.05);">
           <div class="flex justify-center mb-8">
-            <img src="imges/mission.svg" alt="" class="ltr:mr-8 rtl:ml-8">
-            <h4 class="mt-auto mb-auto font-bold text-3xl">الهدف</h4>
+            <img src="imges/mission.svg" alt="" class="ml-2.5 md:ml-5">
+            <h4 class="mt-auto mb-auto font-bold text-xl	 md:text-[26px] xl:text-3xl">الهدف</h4>
           </div>
-          <p class="text-lg	text-slate-500 px-10 leading-[44px]">تهدف إلمام الى مساعدة المنشآت وموظفيها في مجال العمليات الحكومية والموارد البشرية باكتشاف الأخطاء والملاحظات في العمليات الحكومية وحلها وتمكين المسؤولين من اتخاذ القرارات السليمة لجعل المنشأة في حال أفضل مما هي عليه.</p>
+          <p class="text-xs md:text-sm	xl:text-lg text-slate-500 px-10 leading-6 md:leading-8 xl:leading-[44px] pb-5 xl:pb-8">تهدف إلمام الى مساعدة المنشآت وموظفيها في مجال العمليات الحكومية والموارد البشرية باكتشاف الأخطاء والملاحظات في العمليات الحكومية وحلها وتمكين المسؤولين من اتخاذ القرارات السليمة لجعل المنشأة في حال أفضل مما هي عليه.</p>
         </div>
       </div>
     </section>
     <section class="mt-60">
       <div>
         <div class="mb-16">
-          <h2 class="flex justify-center text-lg lg:text-5xl md:text-4xl font-bold leading-tighter tracking-tighter mb-10 aos-init aos-animate text-cyan-500">أهمية إلمام</h2>
-          <h3 class="flex justify-center text-2xl	font-bold">بعض المخاطر التي تتجنبها بإستخدام إلمام</h3>
+          <h2 class="flex justify-center text-3xl xl:text-[552px] md:text-5xl font-bold leading-tighter tracking-tighter mb-10 aos-init aos-animate text-cyan-500">أهمية إلمام</h2>
+          <h3 class="flex justify-center text-base md:text-[26px] xl:text-3xl	font-bold">بعض المخاطر التي تتجنبها بإستخدام إلمام</h3>
         </div>
         <div class="flex justify-center gap-20 mx-20">
           <div class="w-[442px] border-2 border-slate-200 px-10 py-7 rounded-xl	">
             <div class="flex justify-start mb-8">
               <img src="imges/money-4.svg" alt="" class="ltr:mr-8 rtl:ml-8">
-              <h4 class="mt-auto mb-auto font-bold text-3xl">مخاطر مالية</h4>
+              <h4 class="mt-auto mb-auto font-bold text-xl	 md:text-[26px] xl:text-3xl">مخاطر مالية</h4>
             </div>
-            <p class="text-lg	text-slate-500 px-10">
+            <p class="text-xs md:text-sm	xl:text-lg text-slate-500 px-10 leading-6 md:leading-8 xl:leading-[44px] pb-5 xl:pb-8">
               - تجنب الهدر المالي بسبب عدم معرفة بعض الإجراءات الحكومية
   <br>
   - تجنب مخالفات تحدث نتيجة كثرة العمليات الحكومية وترابطها</p>
           </div>
           <div class="w-[442px] border-2 border-slate-200 px-10 py-7 rounded-xl	">
             <div class="flex justify-start mb-8">
-              <img src="imges/phone.svg" alt="" class="ltr:mr-8 rtl:ml-8">
-              <h4 class="mt-auto mb-auto font-bold text-3xl">مخاطر نظامية</h4>
+              <img src="imges/phone.svg" alt="" class="ml-2.5">
+              <h4 class="mt-auto mb-auto font-bold text-xl	 md:text-[26px] xl:text-3xl">مخاطر نظامية</h4>
             </div>
-            <p class="text-lg	text-slate-500 px-10">
+            <p class="text-xs md:text-sm	xl:text-lg text-slate-500 px-10 leading-6 md:leading-8 xl:leading-[44px] pb-5 xl:pb-8">
               - تجنب المشاكل الناتجة عن التوطين الوهمي
 <br>
 - تجنب عدم الاستفادة من الدعم الحكومي للمنشأة</p>
           </div>
           <div class="w-[442px] border-2 border-slate-200 px-10 py-7 rounded-xl	">
             <div class="flex justify-start mb-8">
-              <img src="imges/computer.svg" alt="" class="ltr:mr-8 rtl:ml-8">
-              <h4 class="mt-auto mb-auto font-bold text-3xl">مخاطر إدارية</h4>
+              <img src="imges/computer.svg" alt="" class="ml-2.5">
+              <h4 class="mt-auto mb-auto font-bold text-xl	 md:text-[26px] xl:text-3xl">مخاطر إدارية</h4>
             </div>
-            <p class="text-lg	text-slate-500 px-10">
+            <p class="text-xs md:text-sm	xl:text-lg text-slate-500 px-10 leading-6 md:leading-8 xl:leading-[44px] pb-5 xl:pb-8">
               - تجنب عدم قدرة المسؤولين عن العمليات الحكومية على قيادة المنشأة
   <br>
   - تجنب عدم وجود تصور واضح للإدارة التنفيذية لاتخاذ القرارات السليمة</p>
@@ -143,10 +143,7 @@
         </div>
       </div>
       <div class="flex">
-        <img src="imges/Group.svg" alt="">
-        <img src="imges/dashboard.svg" alt="" class="absolute left-0">
-        <img src="imges/reports.svg" alt="" class="absolute mt-[630px] mr-[75px]" >
-      <div class="relative top-[1040px] right-[425px]">
+      <div class="">
         <h5 class="mb-10">يمكنك الأن معرفة حالة منشأتك</h5>
         <button class="text-white bg-cyan-500 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 dark:bg-primary-600 dark:hover:bg-primary-700 focus:outline-none dark:focus:ring-primary-800 w-28 h-11 rounded-[10px] flex justify-center min-w-28 lg:w-max m-auto">انشاء تقارير</button>
       </div>
@@ -155,8 +152,8 @@
     <section class="relative mx-auto px-4 sm:px-6 bg-sky-500">
       <div class="py-12 md:py-20">
           <div class="max-w-3xl mx-auto text-center pb-12 md:pb-20">
-            <h2 class="flex justify-center text-lg lg:text-5xl md:text-4xl font-bold leading-tighter tracking-tighter mb-10 aos-init aos-animate text-white">أهمية إلمام</h2>
-            <h3 class="flex justify-center text-2xl	font-bold">بعض المخاطر التي تتجنبها بإستخدام إلمام</h3>
+            <h2 class="flex justify-center text-3xl xl:text-[552px] md:text-5xl font-bold leading-tighter tracking-tighter mb-10 aos-init aos-animate text-white">أهمية إلمام</h2>
+            <h3 class="flex justify-center text-base md:text-[26px] xl:text-3xl	font-bold">بعض المخاطر التي تتجنبها بإستخدام إلمام</h3>
           </div>
           <div class="max-w-sm mx-auto grid gap-6 grid-cols-2 lg:grid-cols-4 items-start md:max-w-2xl lg:max-w-none font-bold">
               <!-- Card 1 -->
