--- a/main.html
+++ b/main.html
@@ -83,7 +83,7 @@
     </section>
     <section class="mt-48	">
       <div class="mb-16">
-        <h2 class="flex justify-center text-3xl xl:text-[552px] md:text-5xl font-bold leading-tighter tracking-tighter mb-10 aos-init aos-animate text-cyan-500">عن إلمام</h2>
+        <h2 class="flex justify-center text-3xl xl:text-[52px] md:text-5xl font-bold leading-tighter tracking-tighter mb-10 aos-init aos-animate text-cyan-500">عن إلمام</h2>
         <h3 class="flex justify-center text-base md:text-[26px] xl:text-3xl font-bold">تعريف عن الرؤية والاهداف</h3>
       </div>
       <div class="md:flex md:justify-center inline-grid gap-40">
@@ -104,38 +104,38 @@
       </div>
     </section>
     <section class="mt-60">
-      <div>
+      <div class="flex flex-col">
         <div class="mb-16">
-          <h2 class="flex justify-center text-3xl xl:text-[552px] md:text-5xl font-bold leading-tighter tracking-tighter mb-10 aos-init aos-animate text-cyan-500">أهمية إلمام</h2>
+          <h2 class="flex justify-center text-3xl xl:text-[52px] md:text-5xl font-bold leading-tighter tracking-tighter mb-10 aos-init aos-animate text-cyan-500">أهمية إلمام</h2>
           <h3 class="flex justify-center text-base md:text-[26px] xl:text-3xl	font-bold">بعض المخاطر التي تتجنبها بإستخدام إلمام</h3>
         </div>
-        <div class="flex justify-center gap-20 mx-20">
-          <div class="w-[442px] border-2 border-slate-200 px-10 py-7 rounded-xl	">
-            <div class="flex justify-start mb-8">
-              <img src="imges/money-4.svg" alt="" class="ltr:mr-8 rtl:ml-8">
+        <div class="md:flex md:justify-center inline-grid gap-5">
+          <div class="w-[252px] h-[230px] xl:w-[401px] md:mr-auto m-auto border-2 border-slate-200 px-5 pt-7 pb-10 rounded-xl">
+            <div class="flex justify-start mb-10">
+              <img src="imges/money-4.svg" alt="" class="ml-5">
               <h4 class="mt-auto mb-auto font-bold text-xl	 md:text-[26px] xl:text-3xl">مخاطر مالية</h4>
             </div>
-            <p class="text-xs md:text-sm	xl:text-lg text-slate-500 px-10 leading-6 md:leading-8 xl:leading-[44px] pb-5 xl:pb-8">
+            <p class="text-xs md:text-sm	xl:text-lg text-slate-500 leading-normal">
               - تجنب الهدر المالي بسبب عدم معرفة بعض الإجراءات الحكومية
   <br>
   - تجنب مخالفات تحدث نتيجة كثرة العمليات الحكومية وترابطها</p>
           </div>
-          <div class="w-[442px] border-2 border-slate-200 px-10 py-7 rounded-xl	">
-            <div class="flex justify-start mb-8">
-              <img src="imges/phone.svg" alt="" class="ml-2.5">
+          <div class="w-[252px] h-[230px] xl:w-[401px] md:m-0 m-auto border-2 border-slate-200 px-5 pt-7 pb-10 rounded-xl">
+            <div class="flex justify-start mb-10">
+              <img src="imges/phone.svg" alt="" class="ml-5">
               <h4 class="mt-auto mb-auto font-bold text-xl	 md:text-[26px] xl:text-3xl">مخاطر نظامية</h4>
             </div>
-            <p class="text-xs md:text-sm	xl:text-lg text-slate-500 px-10 leading-6 md:leading-8 xl:leading-[44px] pb-5 xl:pb-8">
+            <p class="text-xs md:text-sm	xl:text-lg text-slate-500 leading-normal">
               - تجنب المشاكل الناتجة عن التوطين الوهمي
 <br>
 - تجنب عدم الاستفادة من الدعم الحكومي للمنشأة</p>
           </div>
-          <div class="w-[442px] border-2 border-slate-200 px-10 py-7 rounded-xl	">
-            <div class="flex justify-start mb-8">
-              <img src="imges/computer.svg" alt="" class="ml-2.5">
+          <div class="w-[252px] h-[230px] xl:w-[401px]  md:ml-auto m-auto border-2 border-slate-200 px-5 pt-7 pb-10 rounded-xl">
+            <div class="flex justify-start mb-10">
+              <img src="imges/computer.svg" alt="" class="ml-5">
               <h4 class="mt-auto mb-auto font-bold text-xl	 md:text-[26px] xl:text-3xl">مخاطر إدارية</h4>
             </div>
-            <p class="text-xs md:text-sm	xl:text-lg text-slate-500 px-10 leading-6 md:leading-8 xl:leading-[44px] pb-5 xl:pb-8">
+            <p class="text-xs md:text-sm	xl:text-lg text-slate-500 leading-normal">
               - تجنب عدم قدرة المسؤولين عن العمليات الحكومية على قيادة المنشأة
   <br>
   - تجنب عدم وجود تصور واضح للإدارة التنفيذية لاتخاذ القرارات السليمة</p>
@@ -152,7 +152,7 @@
     <section class="relative mx-auto px-4 sm:px-6 bg-sky-500">
       <div class="py-12 md:py-20">
           <div class="max-w-3xl mx-auto text-center pb-12 md:pb-20">
-            <h2 class="flex justify-center text-3xl xl:text-[552px] md:text-5xl font-bold leading-tighter tracking-tighter mb-10 aos-init aos-animate text-white">أهمية إلمام</h2>
+            <h2 class="flex justify-center text-3xl xl:text-[52px] md:text-5xl font-bold leading-tighter tracking-tighter mb-10 aos-init aos-animate text-white">أهمية إلمام</h2>
             <h3 class="flex justify-center text-base md:text-[26px] xl:text-3xl	font-bold">بعض المخاطر التي تتجنبها بإستخدام إلمام</h3>
           </div>
           <div class="max-w-sm mx-auto grid gap-6 grid-cols-2 lg:grid-cols-4 items-start md:max-w-2xl lg:max-w-none font-bold">
